# app/Http/Controllers/Controller.php
@@ -11,21 +11,23 @@ use Illuminate\Routing\Controller as BaseController;
  * @OA\Info(
  *      version="1.0.0",
  *      title="roslina.com.pl documentation",
- *      description="System zarządzania domową ",
+ *      description="System zarządzania domową rozsadą",
  *      @OA\Contact(
  *          email="grave432@gmail.com"
  *      ),
  * )
- *
  * @OA\Server(
  *      url=L5_SWAGGER_CONST_HOST,
  *      description="roslina.poligon"
  * )
-
- *
- * @OA\Tag(
- *     name="Projects",
- *     description="API Endpoints of Projects"
+ * @OA\Schema(
+ *   schema="apiResponse422",
+ *   @OA\Property(property="message", type="string"),
+ *   @OA\Property(property="errors", type="object",
+ *     @OA\Property(property="email", type="array",
+ *       @OA\Items(type="string", example="The email field is required.")
+ *     ),
+ *   ),
  * )
  */
 class Controller extends BaseController
